# branding-basko

./: .gear-rules  Makefile.in  branding-alt-desktop.spec  branding.spec  color_dec  components.mk  configure.ac  fetch_color  indexhtml.desktop.in
alterator/: Makefile
alterator/design/styles/: alterator.css  menu.css
alterator/styles/: alterator.css.in  menu.css.in
bootloader/: config  config.in  gfxboot.cfg  gfxboot.cfg.in
bootloader/data-boot/: gfxboot.cfg
bootsplash/config/: bootsplash-1024x768.cfg.in  bootsplash-640x480.cfg  bootsplash-640x480.cfg.in  bootsplash-640x480.cfg~  bootsplash-800x480.cfg~  bootsplash-800x600.cfg  bootsplash-800x600.cfg.in  bootsplash-800x600.cfg~
browser-qt/: Makefile  desktop.qrc
browser-qt/design/: design.ini
components/ahttpd/styles/: alterator.css.in
components/bootloader/: config.in  gfxboot.cfg.in
components/bootsplash/: theme.plymouth.in  theme.script  theme.script.in
components/browser-qt/: theme.qrc
components/browser-qt/design/: design.ini.in  design.qss.in
components/grub2/: theme.txt
components/indexhtml/: index-en.html.in  index.css.in  indexhtml.desktop.in
components/systemd/: os-release.in
gnome-settings/: applications.menu  gtkrc.in  index.theme.in  metacity-theme-1.xml.in
gnome-settings/skel/.gconf/apps/panel/applets/applet_0/: %gconf.xml
graphics/: config
graphics/kde4/: kdm-color-scheme.colors
graphics/kde4/kdm-theme/: KdmGreeterTheme.desktop  oxygen-air.xml
graphics/kde4/ksplash-themes/Default/: Theme.rc
indexhtml/: index-en.html  index-en.html.in  index-ru.html  index-ru.html.in  index-uk.html  index-uk.html.in  index.css.in
kde3-settings/applications/: home.desktop
kde3-settings/apps/kdisplay/color-schemes/: ALT Linux Desktop-4.1-Blue.kcsrc  ALT Linux Desktop-4.1.kcsrc  ALTLinux Desktop-4.0.kcsrc  scheme.kcsrc.in
kde3-settings/apps/kicker/: default-apps
kde3-settings/apps/kviewviewer/kpartplugins/: kviewbrowser.rc
kde3-settings/config/: clock_panelapplet_iz4k7sqewslydrstu3oc_rc  gtkrc  gtkrc-2.0  kaffeinerc  kcmlaptoprc  kcontrolrc  kdeglobals  kdesktoprc  konquerorrc  konsolerc  kontactrc  ksplashrc  kviewcanvasrc  kviewrc  kviewviewerrc  kwinrc
kde3-settings/kconf_update/: kickerrc-desktop.upd
kde3-settings/kde/: bookmarks-ru.xml  bookmarks.xml
kde3-styles-splash/: Theme.rc.in
kde4-settings/kde4/share/config/: default-apps  kwinrc  nepomukserverrc  plasma-appletsrc  plasmarc
kde4-settings/menu/: desktop.menu
notes/: index-en.html.in  index-ru.html.in  index-uk.html.in  license.all.html  license.all.html.in  license.ru.html  license.ru.html.in  release-notes.all.html  release-notes.all.html.in  release-notes.ru.html  release-notes.ru.html.in
xfce-settings/: xinitrc.in
xfce-settings/etcskel/: .Xdefaults
xfce-settings/etcskel/.config/xfce4/: helpers.rc
xfce-settings/etcskel/.config/xfce4-session/: xfce4-session.rc  xfce4-splash.rc
xfce-settings/etcskel/.config/xfce4/desktop/: icons.screen0.rc  menu.xml
xfce-settings/etcskel/.config/xfce4/mcs_settings/: desktop.xml  gtk.xml
xfce-settings/etcskel/.config/xfce4/panel/: launcher-10.rc  launcher-11888137035.rc  launcher-9.rc  pager-11888131361.rc  panels.xml  whiskermenu-13.rc  xfce4-menu-11888130820.rc  xfce4-menu-5.rc  xkb-plugin-11896827708.rc
xfce-settings/etcskel/.config/xfce4/xfconf/xfce-perchannel-xml/: displays.xml  thunar.xml  xfce4-desktop.xml  xfce4-keyboard-shortcuts.xml  xfce4-panel.xml  xfce4-power-manager.xml  xfce4-session.xml  xfwm4.xml  xsettings.xml
xfce-settings/etcskel/.config/xfconf/xfce-perchannel-xml/: xfce4-desktop.xml
xfce-settings/etcskel/.local/share/applications/: defaults.list  mimeinfo.cache  xarchiver-usercreated.desktop
xfce-settings/etcskel/Templates/: AbiWord Document.abw  Gnumeric Spreadsheet.gnumeric
xfce-settings/themes/ALTLinux/gtk-2.0/: gtkrc
